--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+*{
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
+}
+:root{
+  --gray:rgb(177, 169, 169);
+  --blue: rgb(12, 172, 246);
+  --bg:linear-gradient(100deg, rgb(49, 4, 175), rgb(11, 76, 216,0.9));
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  transition: 0.4s linear all;
+  background: var(--bg);
+  background-repeat:no-repeat !important;
+  height: 100vh;
+  width: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar{
+  padding-top: 1em;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-brand{
+  color: aliceblue;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: right;
+  font-style: italic;
 }
-
-.App-link {
-  color: #61dafb;
+.nav-link{
+  color: aliceblue;
+  font-size: 19px;
+  font-weight: 600;
+  margin: 0 1.4em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-link:hover{
+  color: antiquewhite !important;
 }
