--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,509 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
 *{
-  padding: 0%;
-  margin: 1%;
-  box-sizing: border-box;
+    padding: 0%;
+    margin: 0%;
 }
-:root{
-  --gray:rgb(177, 169, 169);
-  --blue: rgb(12, 172, 246);
-  --bg:linear-gradient(100deg, rgb(49, 4, 175), rgb(11, 76, 216,0.9));
+:root {
+    --roboto: 'Roboto', sans-serif;
+    --light: #f8f9fa;
+    --roboto2: 'Roboto', sans-serif;
+
+
+  }
+body{
+    font-family: 'Roboto', sans-serif;
+    background-color: var(--light);
 }
 
-body{
-  transition: 0.4s linear all;
-  background: var(--bg);
-  background-repeat:no-repeat !important;
-  height: 100vh;
-  width: 100%;
+
+
+.Top_Nav{
+    margin-top: 2em;
 }
-.navbar{
-  padding-top: 1em;
+
+.Top_Nav .right{
+    /* margin-left: 5em; */
 }
-.navbar-brand{
-  color: aliceblue;
-  font-size: 24px;
-  font-weight: 600;
-  text-align: right;
-  font-style: italic;
+.Top_Nav .right h1{
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 3px;
 }
-.nav-link{
-  color: aliceblue;
-  font-size: 19px;
-  font-weight: 600;
-  margin: 0 1.4em;
+.Top_Nav .right p{
+    letter-spacing: 2em;
+    color: #22B8F0;
 }
-.nav-link:hover{
-  color: antiquewhite !important;
+.Top_Nav .left li a{
+    font-size: 18px;
+    color: black;
+    transition: all 0.3s linear;
+    padding: 10px 10px;
+
+}
+.Top_Nav .left li a:hover{
+    background-color: #000;
+    color: #fff;
+    border-radius: 40px;
+
+}
+
+/* Top Nav ENd */
+
+
+.Main_Nav{
+    position: relative;
+    background-color: #fff;
+    height: auto;
+   
+}
+.Main_Nav ul{
+    display: flex;
+}
+.logo{
+    width: 10%;
+
+}
+.logo img{
+    width: 100%;
+    height: 7vh;
+    border-radius: 40px;
+}
+.nav-item a{
+    position: relative;
+    display: flex;
+    text-decoration: none;
+    text-decoration-line: none;
+    color: #000 !important;
+    margin: 0em 1em;
+    padding: .5em .6em;
+    border-radius: 20px;
+    font-family: sans-serif;
+    font-size: 16px;
+    transition: all 0.2s linear;
+}
+.Main_Nav  ul li a:hover{
+    background: #000;
+    color: var(--light) !important;
+}
+
+/* add classes with the help of useState */
+/* fixed to Style */
+.fixed-top{
+    color: #fff !important;
+    /* padding-left: 15em; */
+    transition: all 0.3s linear;
+}
+
+.NavBGSet{
+    background-color:#0099ff !important;
+}
+.NavBGSet ul li a{
+    color: #fff !important;
+    padding-left: 10px !important;
+    margin: 0 2em !important;
+}
+
+.text{
+    color: #f8f9fa !important;
+}
+.text:hover{
+    background-color: #fff !important;
+    color: #000 !important;
+
+}
+
+/* end main nav */
+
+
+.carousel-item{
+    position: relative;
+    width: 100%;
+    height: 70vh;
+
+}
+.carousel-item img{
+    width: 100%;
+}
+.carousel-item h1{
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: antiquewhite;
+    font-weight: bold;
+    background:linear-gradient(rgba(0,0,0,0.8), #22B8F0,rgba(0, 0, 0, 0.9));
+    transition: all 0.1s linear;
+    padding: .8em 2em;
+}
+
+.Skills{
+    position: relative;
+    background-color: #0099ff;
+    border: none !important;
+    
+}
+.Skills h1{
+    font-size: 3em;
+    margin-bottom: 1em;
+    color: #000;
+
+}
+.Skill_IMG{
+    width: 90%;
+}
+.Skill_IMG img{
+    width: 100%;
+}
+
+
+
+/* end skills */
+/* POrtfolio */
+
+.Portfolio_text{
+    color: #0099ff;
+    padding-left: .5em;
+}
+.Port_text .btn{
+    font-weight: bold;
+    border: 1px solid #000;
+    transition: all 0.4s linear;
+    margin-bottom: 2em;
+}
+.Port_text .btn:hover{
+    transition: all 0.4s linear;
+    color: #fff;
+
+    background: linear-gradient(rgba(0,0,0,0.9),#0099ff,rgba(0,0,0,0.9));
+}
+.Port_IMG{
+    width: 40%;
+}
+.Port_IMG p{
+    background-color: #dddddddd;
+    
+}
+.Port_IMG img{
+    width: 100%;
+    cursor: pointer;
+    padding-top: 2em;
+}
+/* end portfolio */
+
+
+
+.ImgUp{
+    transform: translateY(400px) !important;
+}
+
+/* contact */
+
+.contact{
+    margin-top: -5em;
+    background: linear-gradient(60deg, #0099ff, rgb(12, 221, 240));
+}
+.contact_form{
+    position: relative;
+    background-color: #fff;
+    box-shadow: 0px 22px 20px 6px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 22px 20px 6px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 22px 20px 6px rgba(0,0,0,0.75);
+    border-radius: 20px;
+}
+.contact_form h1{
+    font-size: 34px;
+}
+.contact_form h1 span{
+    color: #0099ff;
+}textarea,
+.form-group input{
+    padding: .3em .9em;
+    outline: none;
+    width: 90%;
+    resize: none;
+    background-color: #dddddddd;
+    color: #000;
+    border: 3px solid #dddddd;
+    border-radius: 10px;
+
+}
+.form-group_left p{
+    margin: 3.6em 1em;
+}
+.form-group_left p i{
+    font-size: 20px;
+    padding: .2em .3em;
+    color: #dddddd;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color: #000;
+}
+.left h1{
+    font-family: sans-serif;
+    color: gray;
+    font-weight: lighter;
+
+}
+.left .touch{
+    color: gray;
+}
+
+/* Footer */
+
+
+.Footer{
+    border-top: 2px solid #fff;
+    background: #dddddd;
+    padding: 2em 0em ;
+}
+.footer_inner span{
+    color: #0099ff;
+}
+
+.fa-bars{
+    display: none;
+    cursor: pointer;
+}
+
+/* ABout me */
+.AboutHome{
+    font-size: 40px;
+    font-style: italic;
+    }
+    .About{
+        background:linear-gradient(#ddd,rgb(0, 195, 255,.9));
+    }
+    /* about me left */
+.about__me__left{
+    position: relative;
+    text-align: right;
+}
+.about__me__left  img{
+    width: 40%;
+    margin-bottom: 3em;
+    border-radius: 100px;
+}
+.about__me__left  p{
+    color: darkolivegreen;
+    text-align: right;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+/* fa icons */
+.about_me__Links{
+    position: absolute;
+    right: 0;
+}
+.about_me__Links i{
+    font-size: 24px;
+    color: darkolivegreen;
+    cursor: pointer;
+}
+.about_me__Links i:hover{
+    color: rgb(94, 117, 94);
+}
+
+/* about me right */
+.about__me__right{
+    position: relative;
+
+}
+.about__me__right h5{
+    font-family:  sans-serif !important; 
+    font-size: 33px;
+    width: 100wv;
+    border-bottom: 1px solid gray !important;
+    padding-bottom: 2em;
+    font-weight: bold;
+
+}
+.about__me__right .experiance{
+    border-bottom: 1px solid gray;
+}
+.about__me__right .experiance p{
+    font-size: 21px;
+    color: gray !important;
+    font-family: sans-serif;
+    margin-bottom: 2em;
+}
+
+/* about Skills */
+.majors,
+ h2{
+    font-family: sans-serif;
+    padding-top: 1em;
+    padding-bottom: .3em;
+}
+strong{
+    color: darkolivegreen
+}
+.myProgress{
+    background-color: darkgray;
+    height: 3vh;
+}
+
+#myBar{
+    height: 3vh;
+    width: 65%;
+    background-color: rgb(40, 58, 40);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: darkgrey;
+    padding-left: 58%;
+}
+#myBar2,
+#myBar7{
+    height: 3vh;
+    width: 80%;
+    background-color: rgb(40, 58, 40);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: darkgrey;
+    padding-left: 74%;
+}
+
+#myBar3,
+#myBar4,
+#myBar8
+{
+    height: 3vh;
+    width: 50%;
+    background-color: rgb(40, 58, 40);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: darkgrey;
+    padding-left: 44%;
+}
+
+
+#myBar5{
+    height: 3vh;
+    width: 55%;
+    background-color: rgb(40, 58, 40);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: darkgrey;
+    padding-left: 49%;
+}
+
+#myBar6{
+    height: 3vh;
+    width: 75%;
+    background-color: rgb(40, 58, 40);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: darkgrey;
+    padding-left: 69%;
+}
+
+
+#myBar9,
+#myBar10{
+    height: 3vh;
+    width: 40%;
+    background-color: rgb(40, 58, 40);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: darkgrey;
+    padding-left: 34%;
+}
+
+/* media */
+@media(max-width: 991px){
+    html{
+        font-size: 80%;
+    }
+    .carousel-item h1{
+        font-size: 30px;
+        left: 50%;
+        transform: translate(-50%);
+        margin: 0 auto;
+    }
+    .about__me__left{
+        margin-bottom: 4em;
+        border-bottom: 1px solid gray;
+        text-align: center !important;
+    }
+    .about__me__left p{
+        text-align: center !important;
+    }
+    
+    .about_me__Links{
+        position: relative;
+        padding-left: 40%;
+ 
+    }
+    .about_me__Links i{
+    }
+    
+    .ImgUp2{
+        transform: translateY(-60px) !important;
+        margin-bottom: 5em;
+
+    }
+    .ImgUp{
+        transform: translateY(0px) !important;
+
+    }
+    
+    
+}
+@media(max-width: 769px){
+    html{
+        font-size: 85%;
+    }
+    .Hide_nave{
+        transition: all 0.4s linear !important;
+        display: block !important;
+    }
+    
+.fa-bars
+,.fa-times
+{
+    display: block;
+    font-size: 18px;
+    padding: .4em .6em;
+    
+}
+.hamSet{
+    color: #dddddd;
+}
+.carousel-item img{
+    height: 60vh;
+}
+    .carousel-item h1{
+        font-size: 18px;
+        top: 40%;
+        height: 10vh;
+    }
+    .Hide_nav{
+        display: none !important;
+    }
+    .bg_set a i{
+        font-size: 14px !important;
+    }
+    .right h1{
+        font-size: 23px !important;
+    }
+    .NavBGSet ul li a{
+        margin: .1em auto !important;
+    }
+    .NavBGSet ul{
+        margin: .7em  2.7em!important;
+    }
+
+    /* About me right */
+    .about__me__right h5{
+        font-size: 25px;
+    }
+    .experiance p{
+        font-size: 18px !important;
+    }
+    .left{
+        display: none !important;
+    }
 }
